# ExpenseLab

./: .gitignore  alembic.ini  category_rules.json  pyproject.toml
alembic/: env.py
alembic/versions/: 88e566b2b2e0_init_expense_table.py
src/: etl.py  main.py
src/db/: expenses_repo.py  mapper.py  models.py  rules_repo.py  session.py
src/preprocessing/: etl.py
src/ui/: categories.py  category.py  data.py  weekday.py
